fix homepage alignment

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,10 +4,11 @@
   margin-right: auto;
   display: flex;
   flex-direction: column;
-
+justify-content: baseline;
   align-items: flex-start;
-
+padding-top: 0px;
   height: 100vh;
+  color:red;
 }
 
 .home-left {
@@ -32,7 +33,9 @@
   text-align: center;
 
 }
-
+.home-left p{
+  margin-top: 0px;
+}
 .home-right{
 
   display:flex;
@@ -45,6 +48,6 @@
   .home-page {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    
   }
 }
